# ComprehensiveVCFMerge

./: CMakeLists.txt  LICENSE  README.md
core/: CMakeLists.txt
core/reference/: Reference.cpp  Reference.h
core/utils/: Noncopyable.hpp  Params.cpp  Params.h  ThreadPool.hpp  Types.h  Utility.cpp  Utility.h  Utility.hpp  gzstream.h
core/vcf/: Index.cpp  Index.h  VCF.cpp  VCF.h  Variant.cpp  Variant.h
tools/: CMakeLists.txt  cvm.cpp
